--- a/re.html
+++ b/re.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 
-<!-- $Id: re.html,v 1.14 2010/11/03 17:07:19 roberto Exp $ -->
+<!-- $Id: re.html,v 1.17 2011/01/10 15:08:06 roberto Exp $ -->
 
 <div id="container">
 	
@@ -154,6 +154,13 @@ plus the captures made by the pattern (if any).
 Otherwise, returns nil.
 </p>
 
+<p>
+An optional numeric argument <code>init</code> makes the search
+starts at that position in the subject string.
+As usual in Lua libraries,
+a negative value counts from the end.
+</p>
+
 <h3><code>re.match (subject, pattern)</code></h3>
 <p>
 Matches the given pattern against the given subject.
@@ -225,12 +232,80 @@ The next example matches Lua long strings:
 </p>
 <pre class="example">
 c = re.compile([[
-  longstring &lt;- ('[' {:eq: '='* :} '[' close) =&gt; void
+  longstring &lt;- ('[' {:eq: '='* :} '[' close) -&gt; void
   close &lt;- ']' =eq ']' / . close
-]], {void = function () return true end})
+]], {void = function () end})
 
 print(c:match'[==[]]===]]]]==]===[]')   --&gt; 17
 </pre>
+
+<h3>Abstract Syntax Trees</h3>
+<p>
+This example shows a simple way to build an
+abstract syntax tree (AST) for a given grammar.
+To keep our example simple,
+let us consider the following grammar
+for lists of names:
+</p>
+<pre class="example">
+p = re.compile[[
+      listname &lt;- (name s)*
+      name &lt;- [a-z][a-z]*
+      s &lt;- %s*
+]]
+</pre>
+<p>
+Now, we will add captures to build a corresponding AST.
+As a first step, the pattern will build a table to
+represent each non terminal;
+terminals will be represented by their corresponding strings:
+</p>
+<pre class="example">
+c = re.compile[[
+      listname &lt;- (name s)* -&gt; {}
+      name &lt;- {[a-z][a-z]*} -&gt; {}
+      s &lt;- %s*
+]]
+</pre>
+<p>
+Now, a match against <code>"hi hello bye"</code>
+results in the table
+<code>{{"hi"}, {"hello"}, {"bye"}}</code>.
+</p>
+<p>
+For such a simple grammar,
+this AST is more than enough;
+actually, the tables around each single name
+are already overkilling.
+More complex grammars,
+however, may need some more structure.
+Specifically,
+it would be useful if each table had
+a <code>tag</code> field telling what non terminal
+that table represents.
+We can add such a tag using
+<a href="lpeg.html/#cap-g">named group captures</a>:
+</p>
+<pre class="example">
+x = re.compile[[
+      listname <- ({:tag: '' -> 'list':} (name s)*) -> {}
+      name <- ({:tag: '' -> 'id':} {[a-z][a-z]*}) -> {}
+      s <- ' '*
+]]
+</pre>
+<p>
+With these group captures,
+a match against <code>"hi hello bye"</code>
+results in the following table:
+</p>
+<pre class="example">
+{tag="list",
+  {tag="id", "hi"},
+  {tag="id", "hello"},
+  {tag="id", "bye"}
+}
+</pre>
+
 
 <h3>Indented blocks</h3>
 <p>
@@ -401,7 +476,7 @@ THE SOFTWARE.
 
 <div id="about">
 <p><small>
-$Id: re.html,v 1.14 2010/11/03 17:07:19 roberto Exp $
+$Id: re.html,v 1.17 2011/01/10 15:08:06 roberto Exp $
 </small></p>
 </div> <!-- id="about" -->
 
